<resources>
    <string name="app_name">MedicineSystem</string>

    <string name="account_name">帳號</string>
    <string name="add_location">上架其他藥品</string>
    <string name="add_more_medicines">Add more medicines</string>
    <string name="all_locations_different">All the locations have to be different</string>
    <string name="already_scanned">Medicine already scanned</string>

    <string name="back">Go back</string>
    <string name="back_home">Back to home screen</string>

    <string name="check_pickup_requierements">查看檢藥需求</string>
    <string name="code_scanner">Code scanner</string>

    <string name="delete">Delete</string>

    <string name="emergency">緊急</string>
    <string name="emergency_option">是否緊急</string>
    <string name="error">Error</string>
    <string name="execute_shelves_operations">上架作業</string>
    <string name="exp_date">藥品效期</string>

    <string name="field_empty">欄位不能為空!</string>

    <string name="go_pick_up">Go pick up the medicines</string>

    <string name="keep_scanning">Keep scanning</string>

    <string name="line">項次</string>

    <string name="is_it_emergent">Is it an emergency requirement?</string>
    <string name="layer_location">上架位置(層)</string>
    <string name="location">櫃/層/區</string>
    <string name="log_in">登入</string>

    <string name="med_info">Medicine information</string>
    <string name="med_name">藥品名稱</string>
    <string name="med_number">Medicine number</string>
    <string name="med_location">Medicine lcoation</string>

    <string name="new_pickup_requierement">新增檢藥需求</string>
    <string name="no">No</string>
    <string name="no_emergency">不緊急</string>
    <string name="no_requirement">There is no requirement</string>


    <string name="out_of_stock">Out of stock</string>

    <string name="password">密碼</string>
    <string name="pile_location">上架位置(區)</string>

    <string name="quantity">上架數量</string>
    <string name="quantity_in_stock">Quantity in stock</string>
    <string name="quantity_to_pick_up">Quantity to pick up</string>

    <string name="submit">執行上架</string>

    <string name="serial_number">需上架藥品代號</string>
    <string name="server_not_started">Server is not started</string>
    <string name="shelf_location">上架位置(櫃)</string>

    <string name="view_details">查看細項</string>

    <string name="yes">Yes</string>

    <string-array name="quantity_arrays">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
    </string-array>
    <string name="quantity_prompt">Choose a quantity</string>





</resources>
