<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_requirement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lab708.tcmsystem.activity.NewRequirementActivity">

    <TextView
        android:id="@+id/title_new_requirement"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textview_big_1_size"
        android:layout_marginTop="@dimen/margin_title"
        android:text="@string/new_pickup_requierement"
        />

    <TableLayout
        android:id="@+id/new_requirement_tl"
        android:layout_below="@id/title_new_requirement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/new_requirement_row">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/med_number"
                android:textSize="@dimen/textview_big_0_size"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/med_name"
                android:textSize="@dimen/textview_big_0_size"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/quantity"
                android:textSize="@dimen/textview_big_0_size"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/delete"
                android:textSize="@dimen/textview_big_0_size"
                />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/new_requirement_add"
        android:text="@string/add_more_medicines"
        android:layout_below="@id/new_requirement_tl"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text" />

    <Button
        android:id="@+id/new_requirement_submit"
        android:text="Submit"
        android:layout_below="@id/new_requirement_add"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text" />
</RelativeLayout>
