<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lab708.tcmsystem.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >

        <EditText
            android:id="@+id/account_et"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="30sp"
            android:hint="@string/account_name"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_below="@id/account_et"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="30sp"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/log_in"
            android:layout_below="@id/password_et"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/log_in"
            />
        <Button
            android:id="@+id/new_pickup_btn"
            android:layout_below="@id/log_in"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="30sp"
            android:text="@string/new_pickup_requierement"
            />
    </RelativeLayout>

</RelativeLayout>
